--- a/style.css
+++ b/style.css
@@ -16,3 +16,8 @@ body{
     background-color: var(--bgColor);
     color: var(--textColor);
 }
+
+.content-wrapper{
+    margin: 0 auto;
+    width: 85%;
+}
