--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
 body{
     background-color: var(--bgColor);
     color: var(--textColor);
+    font-family: var(--fontFamily);
 }
 
 .content-wrapper{
