style the rest of page content

--- a/style.css
+++ b/style.css
@@ -16,10 +16,66 @@ body{
     background-color: var(--bgColor);
     color: var(--textColor);
     font-family: var(--fontFamily);
+    text-align: center;
 }
 
 .content-wrapper{
     margin: 20% auto;
     width: 85%;
-    
+}
+
+h1{
+    line-height: 2.3rem;
+    font-weight: 600;
+    margin-bottom: 20px ;
+}
+
+#display-article{
+    font-size: 16px;
+    font-weight: 200;
+    line-height: 1.8rem;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+label{
+    display: flex;
+    flex-direction: column;
+}
+
+input[type="email"]{
+    background-color: rgba(255, 255, 255, 0.2);
+    border: none;
+    color: var(--textColor);
+    padding: 13px;
+    margin-bottom: 15px;
+    outline: none;
+}
+
+input[type="submit"]{
+    background-color: rgba(255, 255, 255, 1);
+    border: none;
+    color: var(--bgColor);
+    padding: 13px;
+    margin-bottom: 15px;
+    text-transform: uppercase;
+    font-weight: 600;
+}
+
+#user-notification{
+    font-size: 12px;
+    font-weight: 100;
+    margin-top: 30px;
+}
+
+.social-icons{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 40px;
+    /* width: 200px; */
+    padding: 0 50px;
+}
+
+.social-icons a img{
+    width: 24px;
 }
