--- a/style.css
+++ b/style.css
@@ -82,6 +82,13 @@ input[type="submit"]{
 }
 
 @media screen and (min-width: 758px) {
+
+    .content-wrapper{
+        margin: 15% auto;
+        width: 75%;
+        max-width: 700px;
+    }
+
     label{
         flex-direction: row;
         justify-content: space-between;
@@ -94,4 +101,5 @@ input[type="submit"]{
     input[type="submit"]{
         width: 30%;
     }
+
 }
