--- a/style.css
+++ b/style.css
@@ -81,6 +81,17 @@ input[type="submit"]{
     width: 24px;
 }
 
+#click-here{
+    text-decoration: none;
+    color: var(--textColor);
+}
+
+#click-here:hover{
+    border-bottom: 1px solid var(--textColor);
+    transition: ease-in-out;
+    
+}
+
 @media screen and (min-width: 758px) {
 
     .content-wrapper{
